# Bypass

./: .env  .env.example  Cargo.toml  README.md  build.rs
.sqlx/: query-2be9ca76c649c89de81ace4bc42b04c8dfc3814990cba340c711ac7b7729d9bd.json  query-6c2f0d5939bd0c4140ea870d61aec7a703afc8c36db029d2dcd4f179dab024aa.json  query-90b76bc6f4e1d6193410f08a1383cd545cc4e59948a4f9be5e8173d50d1fefae.json  query-e19dfc94b44ee4cf0ff77397422ef57ae2d17f070ed36a8c29746c6df1954a51.json  query-ecfe01d284e05f4537d75c3151305cf620a3678013981f7ff6d3ee8d2a04c383.json
builders/rust-1.77.2-windows-x86_64-gnu/: Dockerfile  build.sh
builders/rust-1.77.2-windows-x86_64-msvc/: Dockerfile  build.sh
migrations/: 20260624071146_users.up.sql  20260627095424_builder_versions.down.sql  20260627095424_builder_versions.up.sql
src/: builders.rs  database.rs  error.rs  lib.rs  main.rs  modules.rs  utils.rs
src/builders/: builders.rs  environment.rs  repo.rs
src/database/: pool.rs
src/middleware/: auth.rs
src/modules/auth/: dto.rs  handler.rs  model.rs  repo.rs  service.rs
src/modules/template/: dto.rs  handler.rs  mod.rs  service.rs
src/modules/user/: dto.rs  handler.rs  model.rs  repo.rs  service.rs
src/router/: router.rs
src/utils/: docker_helper.rs  jwt_helper.rs  password_helper.rs
