[package]
name = "bypass"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
axum = "0.8.9"
chrono = {version="0.4.45",features = ["serde"]}
dotenvy = "0.15.7"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = {version="0.9.0", features = ["runtime-tokio", "tls-rustls","postgres","macros","chrono"]}
tokio = {version="1.52.3", features = ["full"]}
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
validator = {version="0.20.0", features = ["derive"]}
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
git2 = "0.21.0"
tempfile = "3.27.0"
bollard = "0.21.0"
futures-util = "0.3.32"
